Input info as keywords in output of NoiseChisel and Segment
It can be very helpful to have all the parameters that produced the output
in the actual output file to allow reproducibility and inspection of
differences (when playing with parameters) later.

To make this, some minor additions needed to be done in the FITS keyword
writing functions of the FITS library. The names of the functions that
write into a `fitsfile' pointer now has a `_in_ptr' suffix to be similar to
the other functions (for example in writing tables and images). Also, two
new functions were defined: `gal_fits_key_list_reverse' and
`gal_fits_key_write_title_in_ptr'.

--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,25 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  NoiseChisel:
+   - Input files and parameters written in first FITS extension.
+
+  Segment:
+   - Input files and parameters written in first FITS extension.
+
+  Library:
+    -- gal_fits_key_list_reverse: Reverse the given list of FITS keywords.
+    -- gal_fits_key_write_title_in_ptr: Write a two-line title in FITS keywords.
+    -- gal_fits_key_write_in_ptr: New name of gal_fits_key_write.
+    -- gal_fits_key_write_version_in_ptr: new name of gal_fits_key_write_version.
+
 ** Removed features
 
 ** Changed features
+
+  Library:
+    -- gal_fits_key_write: filename and hdu instead of FITS pointer.
+    -- gal_fits_key_write_version: filename and hdu instead of FITS pointer.
 
 ** Bugs fixed
 
