All programs write their configuration in FITS output
In the previous two commits, a feature was added to NoiseChisel and Segment
to write their input configuration options into the output FITS file. But
those functions were very basic and we had to manually go through all the
options and their names, value pointers and documentation. Maintaining this
list (keeping it in sync with the option updates) was a nightmare: with a
high potential of human error.

But the whole process was basically identical to the --printparams (or
`-P') option. So the `gal_options_as_fits_keywords' was added to the
internal `lib/options.c' library to write all the input values into a
`gal_fits_list_key_t' list at the start of all programs. A new
`gal_fits_key_write_config' function was also created to allow easy writing
of this keyword list into the zero-th extension of the output FITS files.

The old "Output headers" section in the book was also re-written to
describe this new feature, and thus its now called "Output FITS files".

--- a/NEWS
+++ b/NEWS
@@ -4,25 +4,32 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
-  NoiseChisel:
-   - Input files and parameters written in first FITS extension.
-
-  Segment:
-   - Input files and parameters written in first FITS extension.
+  All programs:
+   - Input files and parameters written as keywords in the first extension
+     of output when it is FITS. This is only relevant for some programs,
+     (for example not the Fits or Table programs).
 
   Library:
     -- gal_fits_key_list_reverse: Reverse the given list of FITS keywords.
     -- gal_fits_key_write_title_in_ptr: Write a two-line title in FITS keywords.
     -- gal_fits_key_write_in_ptr: New name of gal_fits_key_write.
     -- gal_fits_key_write_version_in_ptr: new name of gal_fits_key_write_version.
+    -- gal_fits_key_write_config: write key list and version as config header.
 
 ** Removed features
 
 ** Changed features
 
+  MakeProfiles:
+    --mergedsize: new name for the old `--naxis' option. Since the option
+          names and values are now written into the FITS header of the
+          output, this option's name would get confused with the mandatory
+          FITS keyword `NAXIS'.
+
   Library:
     -- gal_fits_key_write: filename and hdu instead of FITS pointer.
     -- gal_fits_key_write_version: filename and hdu instead of FITS pointer.
+    -- gal_fits_key_write_filename: write at the top or end of the input list.
 
 ** Bugs fixed
 
