Warp working when type isn't specified
When the type of the output isn't specified in Warp, it will crash. To fix
the problem, a check has been added to only try changing the internal
`float64' type to another type when `p->cp.type!=0'.

This fixes bug #54493.

--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     -- gal_fits_key_write_filename: write at the top or end of the input list.
 
 ** Bugs fixed
+  bug #54493: Warp crashes when type isn't set.
 
 
 
